apps/base/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - name: http
      protocol: TCP
      port: 6767
      targetPort: 6767
